--- a/css/style.scss
+++ b/css/style.scss
@@ -122,13 +122,32 @@ header {
     // align-items: center;
     // justify-content: center;
     .func_box {
-        height: 30px;
+        display: flex;
+        justify-content: start;
+        margin: 10px 0 0 0;
+        gap:10px;
+
+        input{
+            padding: 5px;
+        }
     }
 
     .title {
         @include font_OldLondon(60px);
+        height: 60px;
         line-height: 100%;
         letter-spacing: -2px;
+        
+
+        p {
+            display: inline-block;
+            margin: 0;
+            height: 60px;
+        }
+
+        a {
+            margin: 0;
+        }
     }
 
     nav {
@@ -147,12 +166,17 @@ header {
             background: none;
             padding: 3px 5px;
             margin: 5px 0;
+            @include font_NanumRR(15px);
+            vertical-align: middle;
 
             &:hover {
                 background-color: #add8e6;
                 border-radius: 5px;
             }
+        }
 
+        .selected {
+            font-weight: 900;
         }
 
     }
@@ -163,11 +187,47 @@ header {
     // border: solid 1px #b13c3c;
     text-align: left;
 
+
+
     .card_hl {
         border-bottom: solid 1px #333;
-        padding: 5px;
-        min-height: 220px;
+        min-height: 230px;
+        width: 100%;
         // max-height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        vertical-align: middle;
+        margin: 3px 0 3px;
+
+        img {width: 100%;}
+
+        .article_box {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            min-height: 210px;
+            margin: 5px 0 5px;
+        }
+
+        h2 {
+            @include font_NanumRB(35px);
+            width: 100%;
+            height: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .no-result {
+            @include font_NanumRB(3vw);
+            text-align: center;
+            margin: auto;
+            height: 100%;
+            width: 100%;
+            color: #416886;
+        }
     }
 }
+
 
