--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,15 @@ button{
 }
 body{background: #fff; color: #333;}
 
+// $grid-breakpoints: (
+//   xs: 0,
+//   sm: 576px,
+//   md: 768px,
+//   lg: 992px,
+//   xl: 1200px,
+//   xxl: 1400px
+// );
+
 /* font-family settings */
 @font-face {
     font-family: "NanumSquareB";
@@ -124,59 +133,84 @@ header {
     .func_box {
         display: flex;
         justify-content: start;
-        margin: 10px 0 0 0;
-        gap:10px;
+        align-items: center;
+        margin: 15px 0 0;
+        min-height: 40px;
+        gap:5px;
 
-        input{
-            padding: 5px;
+        button {
+            border: none;
+            background-color: transparent;
+        }
+
+        .search_box {
+            opacity: 0;
+            transition: 0.8s;
+            
+            input{
+                border-radius: 10px;
+                padding: 5px 5px 5px 15px;
+
+                &::placeholder {
+                    color: #b1b1b1
+                }
+            }
+
+        }
+
+        .btn_search {
+            width: 30px;
+            background-color: #c1e7ee;
+            border-radius: 10px;
+            padding: 2px 5px;
         }
     }
 
     .title {
-        @include font_OldLondon(60px);
-        height: 60px;
-        line-height: 100%;
+        @include font_OldLondon(80px);
         letter-spacing: -2px;
+        margin: 5px 0 5px;
         
 
         p {
             display: inline-block;
             margin: 0;
-            height: 60px;
         }
 
         a {
             margin: 0;
         }
+
+        border-bottom: 1px solid #bebebe;
     }
 
     nav {
-        margin-top: 1em;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        border-top: 1px solid #bebebe;
         border-bottom: 4px double #6d6d6d;
         gap:0 10px;
         
 
         button {
             border: none;
+            border-radius: 10px;
             background: none;
-            padding: 3px 5px;
-            margin: 5px 0;
+            padding: 5px 10px;
+            margin: 0px 0 3px 0;
             @include font_NanumRR(15px);
             vertical-align: middle;
 
             &:hover {
-                background-color: #add8e6;
-                border-radius: 5px;
+                background-color: #d0f2f8;
+                
             }
         }
 
         .selected {
             font-weight: 900;
+            background-color: #d0f2f8;
         }
 
     }
@@ -191,9 +225,9 @@ header {
 
     .card_hl {
         border-bottom: solid 1px #333;
-        min-height: 230px;
         width: 100%;
-        // max-height: 300px;
+        min-height: 230px;
+        // max-height: 300px;        
         display: flex;
         justify-content: center;
         align-items: center;
@@ -220,13 +254,111 @@ header {
         }
 
         .no-result {
-            @include font_NanumRB(3vw);
+            @include font_NanumRB(55px);
             text-align: center;
-            margin: auto;
+            margin: 5px 0 5px;
             height: 100%;
             width: 100%;
             color: #416886;
         }
+    }
+}
+
+.btn_hamburger {
+    // display: none;
+
+    .bar {
+        width: 30px;
+        height: 4px;
+        background-color: #333;
+        margin: 6px 0;
+        opacity: 0.9;
+        
+    }
+}
+
+.show {
+    display: inline-block;
+}
+
+.side_bar {
+    height: 100%;
+    width: 0;
+    max-width: 240px;
+    position: fixed;
+    z-index: 1;;
+    top:0;
+    left:0;
+    background: hsla(189, 100%, 88%, 0.75);
+    overflow-x: hidden;
+    transition: 0.7s;
+
+    .side_nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        gap: 10px;
+        width: 240px;
+        // text-decoration: underline;
+
+        button {
+            background-color: #9de8fd;
+            border: solid 2px #236c77;
+            position: relative;
+            
+            &::before {
+                position: absolute;
+                content: "▶ ";
+                left: -20px;
+                color: #236c77;
+                font-size: 14px;
+            }
+        }
+    }
+
+    .side_title {
+        margin: 40px auto 20px 20px;
+        @include font_OldLondon(35px);
+        border-radius:20px;
+        padding: 5px 30px;
+        // background-color: #333;
+        border: solid 3px #333;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+        background-color: #9de8fd;
+    }
+
+    button {
+        display: block;
+        border: none;
+        background: transparent;
+        margin-left: 45px;
+        border-radius: 10px;
+        padding: 5px;
+
+        &:hover {
+            background: #ffffff;
+        }
+
+    }
+
+    .btn_close {
+        @include font_NanumRR(30px);
+        position: absolute;
+        top : 10px;
+        right: 10px;
+        height: 30px;
+        line-height: 110%;
+        border-radius:20px;
+        padding: 0 5px;
+        background-color: #236c77;
+        color:#ffffff;
+    }
+
+
+
+    .side_nav {
+
     }
 }
 
