--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,10 @@ body {
 }
 /* basic element form settings */
 main {
+  position: relative;
   border: solid 1px #333;
   text-align: center;
+  overflow: auto;
 }
 
 header .func_box {
@@ -125,7 +127,7 @@ header .title p {
 header .title a {
   margin: 0;
 }
-header nav {
+header .main_nav {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -133,7 +135,7 @@ header nav {
   border-bottom: 4px double #6d6d6d;
   gap: 0 10px;
 }
-header nav button {
+header .main_nav button {
   border: none;
   border-radius: 10px;
   background: none;
@@ -143,16 +145,15 @@ header nav button {
   font-size: 15px;
   vertical-align: middle;
 }
-header nav button:hover {
+header .main_nav button:hover {
   background-color: #d0f2f8;
 }
-header nav .selected {
+header .main_nav .selected {
   font-weight: 900;
   background-color: #d0f2f8;
 }
 
 .headline {
-  margin-top: 1em;
   text-align: left;
 }
 .headline .card_hl {
@@ -171,7 +172,8 @@ header nav .selected {
      object-fit: cover;
   border: solid 1px rgba(120, 164, 247, 0.1450980392);
   min-height: 230px;
-  max-height: 400px;
+  max-height: 350px;
+  border-radius: 5px;
 }
 .headline .card_hl .article_box {
   display: flex;
@@ -277,4 +279,61 @@ header nav .selected {
   padding: 0 5px;
   background-color: #236c77;
   color: #ffffff;
+}
+
+.page_box {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 65px;
+  border: solid 2px rgba(131, 200, 212, 0.8784313725);
+  border-radius: 30px;
+  background-color: rgba(208, 242, 248, 0.8784313725);
+}
+.page_box ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 30px;
+  margin-bottom: 0px !important;
+}
+.page_box ul li:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+.page_box ul .active {
+  cursor: auto;
+}
+
+.page_toggle_box button {
+  position: fixed;
+  bottom: 27px;
+  right: 10px;
+  border: none;
+  background: rgba(208, 242, 248, 0.8784313725);
+  border: solid 2px #83c8d4;
+  border-radius: 30px;
+  display: inline;
+  font-size: 20px;
+  font-weight: 900;
+  color: #83c8d4;
+  width: 50px;
+  height: 50px;
+  line-height: 30px;
+  padding: 0 0 2px 0;
+}
+
+.page_box_bottom ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 0px !important;
+}
+.page_box_bottom ul li:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+.page_box_bottom ul .active {
+  cursor: auto;
 }
