--- a/css/style.scss
+++ b/css/style.scss
@@ -369,7 +369,7 @@ header {
 .page_box {
     display: none;
     position: fixed;
-    bottom:20px;
+    bottom:83px;
     right:65px;
     border: solid 2px #83c8d4e0;
     border-radius: 30px;
@@ -383,13 +383,19 @@ header {
         padding: 10px 30px;
         margin-bottom: 0px !important;
 
-        li:hover {
-            cursor: pointer;
-            opacity: 0.7;
+
+        li {
+
+            &:hover {
+                cursor: pointer;
+                opacity: 0.7;
+            }
         }
     
         .active {
             cursor: auto;
+            border: solid 1px #82c1ca;
+            background-color: #6ecedf;
         }
     }
 
@@ -399,7 +405,7 @@ header {
     
     button {
         position: fixed;
-        bottom: 27px;
+        bottom: 90px;
         right: 10px;
         border: none;
         background: #d0f2f8e0;
@@ -413,8 +419,33 @@ header {
         height: 50px;
         line-height: 30px;
         padding: 0 0 2px 0;
-
     }
+}
+
+
+.top_short_cut {
+    
+    a {
+        position: fixed;
+        bottom: 27px;
+        right: 10px;
+        border: none;
+        background: #d0f2f8e0;
+        border: solid 2px #83c8d4;
+        border-radius: 30px;
+        display: inline;
+        font-size: 20px;
+        font-weight: 900;
+        color: #83c8d4;
+        width: 50px;
+        height: 50px;
+        line-height: 40px;
+        padding: 0 0 2px 0;
+
+        &:hover {opacity: 0.7;}
+    }
+
+
 }
 
 .page_box_bottom {
@@ -434,9 +465,8 @@ header {
     
         .active {
             cursor: auto;
+            border: solid 1px #82c1ca;
+            background-color: #6ecedf;
         }
     }
 }
-
-
-
